--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
 <link href="style.css" rel="stylesheet" type="text/css">
-<title>Homework 3</title>
+<title>CS360 Data Visualization Final Project</title>
 </head>
 
 <body>
 
   <div id="header" class="centertext">
       <img id="avatar" src="avatar.jpeg" style="width:100px;height:100px;">
-      <h1>Gordon Li</h1>
+      <h1><a href=mailto:gli17@usfca.edu>Gordon Li</a></h1>
       <p id="bio">I'm a second-year Computer Science major, taking the CS360 Data Visualization course at the <a href="http://usfca.edu">University of San Francisco</a> in Spring 2017 with <a href="http://sjengle.cs.usfca.edu">Professor Sophie Engle</a>.</p>
       <div id="topcolorbar" class="colorful1">
           <br>
@@ -20,9 +20,9 @@
 
   <h1 class="centertext">OKCupid Profiles Data Visualizations</h1>
   <div class="centertext" id="nav">
-    <a href="sunbursts"><h3>Men Vs. Women In Ethnicity, Education, Etc.</h3></a>
-    <a href="jobincome_linecharts"><h3>How Much Men Vs. Women Make</h3></a>
-    <a href="wordfreq_scatterplot"><h3>How Men Vs. Women Describe Themselves</h3></a>
+    <a href="jobincome_linecharts"><h3>How Much Money Men &amp; Women Make</h3></a>
+    <a href="sunbursts"><h3>Men &amp; Women In Ethnicity, Education, Etc.</h3></a>
+    <a href="wordfreq_scatterplot"><h3>How Men &amp; Women Describe Themselves</h3></a>
   </div>
 
   <br>
@@ -33,20 +33,14 @@
 
 <h2>Project Dataset</h2>
 
-<h3>Location</h3>
-<a href="https://github.com/rudeboybert/JSE_OkCupid">https://github.com/rudeboybert/JSE_OkCupid</a>
+<h3>Description</h3>
+<p>A data set consisting of user profile data for 59,946 San Francisco OkCupid users (a free online dating website) from June 2012. Each row represents the data for one user profile, and columns include user information and lifestyle variables such as sex, sexual orientation, age, ethnicity, education, income, and religion, along with text responses to the 10 essay questions such as “My Self Summary”. <a href="https://github.com/rudeboybert/JSE_OkCupid" target="_blank">The original dataset</a> was processed for essay text analysis, but <a href="https://github.com/rudeboybert/okcupiddata" target="_blank">a smaller, cleaner version</a> was used for the other visualizations. </p>
+
+<h3>Motivation</h3>
+<p>I chose this dataset because the possibility of quantifying dating in the digital world is interesting to me. I had seen some intriguing data visualizations on the OkCupid blog in the past, and was pleased to discover this dataset so that I too may try to discover some insights from it. The dataset is also sampled from San Francisco, so it may be of particular relevance to the students at the USF taking the Data Visualization course for which this project is being done. I hope to learn from this dataset of dating profile data some interesting things about human society, culture, and psychology, especially with regard to differences in gender.</p>
 
 <h3>License</h3>
 <p>“Data scraped from public profiles on www.okcupid.com on 06/30/2012. Permission to use this data was obtained from OkCupid president and co-founder Christian Rudder under the condition that the dataset remains public.” (okcupid_codebook.txt, Kim and Escobedo-Land)</p>
-
-<h3>Description</h3>
-<p>A data set consisting of user profile data for 59,946 San Francisco OkCupid users (a free online dating website) from June 2012. Each row represents the data for one user profile, and columns include user information and lifestyle variables such as sex, sexual orientation, age, height, ethnicity, education, income, religion, drinking habits, and smoking habits, along with text responses to the 10 essay questions such as “My Self Summary”.</p>
-
-<h3>Motivation</h3>
-<p>I chose this dataset because the possibility of quantifying dating in the digital world is interesting to me. I had seen some intriguing data visualizations on the OkCupid blog in the past, and was pleased to discover this dataset so that I too may try to discover some insights from it. The dataset is also sampled from San Francisco, so it may be of particular relevance to the students at the University of San Francisco taking the Data Visualization course for which this project is being done.</p>
-
-<h3>Aims</h3>
-<p>I hope to learn some interesting things about human culture, psychology, and behavior in general and specifically concerning courtship from this dataset. I would like to look for unexpected relationship between the various variables provided in user profile data. I would also like to see how people of different groups describe themselves in different ways in their text responses.</p>
 
 
 <div id="bottomcolorbar" class="colorful2">
