--- a/jobincome_linecharts/index.html
+++ b/jobincome_linecharts/index.html
@@ -44,11 +44,15 @@
 }
 
 body {
-  margin: 10vh 5em;
+  margin: 10vh 0vw;
 }
 
 div.notvis {
-  margin: 0vh 10em;
+  margin: 0vh 20vw;
+}
+
+div.vis {
+  margin: 0vh 0vw;
 }
 
 </style>
@@ -56,35 +60,33 @@ div.notvis {
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script src="d3.svg.ribbon.js"></script>
 
+<title>CS360 Data Visualization Final Project</title>
+
 </head>
 <body>
   <div class="notvis">
     <div id="header" class="centertext">
         <img id="avatar" src="../avatar.jpeg" style="width:100px;height:100px;">
-        <h1>Gordon Li</h1>
+        <h1><a href=mailto:gli17@usfca.edu>Gordon Li</a></h1>
         <p id="bio">I'm a second-year Computer Science major, taking the CS360 Data Visualization course at the <a href="http://usfca.edu">University of San Francisco</a> in Spring 2017 with <a href="http://sjengle.cs.usfca.edu">Professor Sophie Engle</a>.</p>
         <div id="topcolorbar" class="colorful1">
             <br>
         </div>
     </div>
-  </div>
 
     <h1 class="centertext"><a href="../">OKCupid Profiles Data Visualizations</a></h1>
-    <h2 class="centertext">“My Self-Summary” Word Frequencies</h2>
+    <h2 class="centertext">Incomes and Profiles by Job</h2>
     <br>
   </div>
 
   <div class="vis"></div>
 
   <div class="notvis">
-    <h2>Dataset</h2>
-    <p>This geospatial data visualization shows San Francisco 311 tree maintenance requests opened in 2016. The <a href="https://data.sfgov.org/City-Infrastructure/Tree-Maintenance-2016/d9d2-cuwu">Tree Maintenance 2016</a> data has 7,493 rows each representing one request, and includes columns about those requests such as their status, type, and time updated. The <a href="https://data.sfgov.org/Geographic-Locations-and-Boundaries/Supervisor-Districts-as-of-April-2012/xz9b-wyfc">Supervisor Districts as of April 2012</a> data provides map boundaries which match the districts listed in the tree maintenance data file.</p>
+    <h2>Data Processing</h2>
+    <p>The data for these multiple line/stream graphs was processed from the original dataset primarily through a prototype version implemented in Tableau. The exported CSV was then edited in Excel, transposed to make a group of rows for each job and a row for each age in each job, to allow for easier nesting of the data by job in D3 for the final visualization. You may download the <a href="streamgraph_multiples_prototype.twbx" target="_blank">Tableau workbook here</a>. </p>
 
-    <h2>Interpretation</h2>
-    <p>This non-proportional symbol map shows the location of every individual request with a single point on the supervisor district map. The request type is encoded by color and labeled in the top-right legend. You can click on one of the categories in the legend to only show requests for that type, and click it once more to reveal all requests again. You can also hover over each point to see details of the request on the top-left.</p>
-
-    <h2>Learnings</h2>
-    <p>From this visualization, we can see that most of the 311 requests for tree maintenance seem to be for damaged trees. In particular, there appears to be a high concentration of damaged trees centered at the southwestern end of Market Street, where we find many requests along the street and in the surrounding area are due to vandalism. This contrasts, for example, to the vertical grouping around Sunset Boulevard in the Sunset district, where most of the incidents are of apparently natural causes (trees about to fall, fallen, dead, etc).</p>
+    <h2>Findings</h2>
+    <p>In these multiple line graphs, we can find trends in income for many jobs and compare them within and between the genders. For example, we see that in banking/financial/real estate that males make more than females throughout their lives, while in education/academia the incomes are more even. We can also tell by the width of the streams the distribution of jobs in this population. For example, there are many more males than females in computer/hardware/software, with highest concentrations at ages 20-40 making about $100k consistently; but among females, medicine/health is one of the most popular fields.</p>
 
     <div id="bottomcolorbar" class="colorful2">
         <br>
